Adding updates i lost back
